# jass

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  positions.fen
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_debt.yml
.github/workflows/: benchmark-nnue.yml  build-book.yml  build.yml  gen-data-wdl.yml  sync-labels.yml  train-nnue.yml
cmake/: nnue_default_data.cpp.in
data/: expert_games.schema.sql
docs/: API.md  ARCHITECTURE.md  EXTENDING.md  GLOSSARY.md  HUB.md  WASM.md
infra/: CCX63-BOOTSTRAP.md  README.md  bootstrap.sh  jass-runner.service  jass-runner.timer  runner.py
jobs/: .gitignore
jobs/queue/: 0001-smoke.sh  0002-rate-test-depth20.sh  0003-diag-after-0002.sh  0004-salvage-logs.sh  0005-rate-test-depth20-v2.sh  0006-diag-runner-state.sh  0007-rate-test-depth20-v3.sh  0008-stop-runner-on-this-host.sh  0009-rate-test-bigbox.sh  0010-gen-data-depth20-10M-bigbox.sh  0010-gen-data-depth20-1M-smallbox.sh  0011-train-and-bench.sh  0012-calibrate-vs-scan.sh  0013-build-book.sh  0014-fetch-master-games.sh  0015-backup-cycle8-to-release.sh  0016-train-with-master-blend.sh  0017-bench-nnue-time.sh  0018-train-with-master-bce.sh  0019-calibrate-vs-scan-fair.sh  0022-build-master-book-and-calibrate.sh
jobs/results/0001-smoke/: status.json
jobs/results/0002-rate-test-depth20/: status.json
jobs/results/0003-diag-after-0002/: status.json
jobs/results/0004-salvage-logs/: status.json
jobs/results/0005-rate-test-depth20-v2/: status.json
jobs/results/0006-diag-runner-state/: status.json
jobs/results/0007-rate-test-depth20-v3/: progress.json  status.json
jobs/results/0008-stop-runner-on-this-host/: status.json
jobs/results/0009-rate-test-bigbox/: progress.json  status.json
jobs/results/0010-gen-data-depth20-1M-smallbox/: progress.json  status.json
jobs/results/0011-train-and-bench/: progress.json  status.json
jobs/results/0012-calibrate-vs-scan/: progress.json  status.json
jobs/results/0013-build-book/: progress.json  status.json
jobs/results/0013-build-book/artefacts/: shard-00  (+12 more)
jobs/results/0014-fetch-master-games/: progress.json  status.json
jobs/results/0015-backup-cycle8-to-release/: status.json
jobs/results/0016-train-with-master-blend/: progress.json  status.json
jobs/results/0017-bench-nnue-time/: progress.json  status.json
jobs/results/0018-train-with-master-bce/: progress.json  status.json
jobs/state/: in-flight.json
jobs/templates/: 0014-fetch-master-games.sh  0020a-multihost-pilot-host-a.sh  0020b-multihost-pilot-host-b.sh  0021-merge-multihost-shards.sh
src/: bitbase.cpp  bitbase.hpp  bitboard.hpp  board.cpp  board.hpp  book.cpp  book.hpp  endgame.cpp  endgame.hpp  engine.cpp  engine.hpp  eval.cpp  eval.hpp  hub.cpp  hub.hpp  main.cpp  movegen.cpp  movegen.hpp  nnue.cpp  nnue.hpp  nnue_default_data.hpp  position.cpp  position.hpp  search.cpp  search.hpp  timemgr.cpp  timemgr.hpp  tournament.cpp  tournament.hpp  tt.cpp  tt.hpp  types.hpp  wasm_api.cpp  zobrist.cpp  zobrist.hpp  zobrist_keys.hpp
tests/: test_book.cpp  test_draws.cpp  test_endgame.cpp  test_engine.cpp  test_framework.hpp  test_hub.cpp  test_main.cpp  test_movegen.cpp  test_nnue.cpp  test_position.cpp  test_search.cpp  test_tournament.cpp  test_tt.cpp
tools/: README.md  bench_arch.py  bench_nnue_time.py  build_master_book.py  calibrate_vs_scan.py  fetch_lidraughts_games.py  merge_jbok.py  pdn_to_jnnw.py  quantize_mlp.py  scout_halfmen.py  scout_wdl.py  train.py  train_mlp.py  train_v3.py
wasm/: build.sh  example.html
(+32 files in other folders)
